LionsTruck/force-app/main/default/objects/Asset/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <formula>TEXT(Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family</label>
    <type>Text</type>
</CustomField>