LionsTruck/force-app/main/default/objects/Asset/fields/L_InitialService__c.field-meta.xml
<CustomField>
    <fullName>L_InitialService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To track if this Truck was purchased with service included</description>
    <label>Initial Service</label>
    <type>Checkbox</type>
</CustomField>