LionsTruck/force-app/main/default/objects/Asset/fields/L_InitialServiceFormula__c.field-meta.xml
<CustomField>
    <fullName>L_InitialServiceFormula__c</fullName>
    <description>For report/chart proposes</description>
    <formula>IF(L_InitialService__c, &apos;with Service&apos;, &apos;no Service&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Service Formula</label>
    <type>Text</type>
</CustomField>