LionsTruck/force-app/main/default/objects/Asset/fields/L_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>L_Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>