LionsTruck/force-app/main/default/objects/Asset/fields/L_PS__c.field-meta.xml
<CustomField>
    <fullName>L_PS__c</fullName>
    <description>PS truck value</description>
    <inlineHelpText>Truck Horse Power</inlineHelpText>
    <label>PS</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>