LionsTruck/force-app/main/default/objects/Asset/fields/L_Suspension__c.field-meta.xml
<CustomField>
    <fullName>L_Suspension__c</fullName>
    <label>Suspension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>