LionsTruck/force-app/main/default/objects/Asset/fields/L_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>L_Tonnage__c</fullName>
    <description>Truck Tonnage value</description>
    <label>Tonnage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>