LionsTruck/force-app/main/default/objects/Asset/fields/L_TruckAxle__c.field-meta.xml
<CustomField>
    <fullName>L_TruckAxle__c</fullName>
    <label>Truck Axle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>