LionsTruck/force-app/main/default/objects/Asset/fields/L_VehicleRegNum__c.field-meta.xml
<CustomField>
    <fullName>L_VehicleRegNum__c</fullName>
    <label>Vehicle Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>