LionsTruck/force-app/main/default/objects/Asset/fields/L_VIN__c.field-meta.xml
<CustomField>
    <fullName>L_VIN__c</fullName>
    <description>Truck Licence plate</description>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>