LionsTruck/force-app/main/default/objects/Asset/fields/L_WheelBase__c.field-meta.xml
<CustomField>
    <fullName>L_WheelBase__c</fullName>
    <description>Truck Wheel Base</description>
    <label>Wheel Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>